--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 #1 $Id$
 
+2010.07.10     coke
+	* Released 2.6.0
+	See NEWS for more.
+
 2010.06.15     Gerd
 	* Released 2.5.0
 	See NEWS for more.
