--- a/docs/project/release_manager_guide.pod
+++ b/docs/project/release_manager_guide.pod
@@ -150,7 +150,8 @@ as these are only used in development and not relevant to the bytecode support
 policy. (Those changes are all included within the major version number
 increase for the supported release.)
 
-Once you've updated PBC_COMPAT, run C<sh tools/dev/mk_native_pbc> to update the
+Once you've updated PBC_COMPAT, running C<sh tools/dev/mk_native_pbc> if
+necessary, then run C<sh tools/dev/mk_native_pbc> to update the
 pbc files used in the native pbc tests.  Note that you must have Parrot already
 built for this to work, and that this script will reconfigure and rebuild
 Parrot with various primitive size options.
